--- a/ToDoList/style.css
+++ b/ToDoList/style.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    background-color: rgb(42, 42, 145);
+    background-image:radial-gradient(circle, green, black) ;
     font-family: 'Courier New', Courier, monospace;
     width: 100%;
     height: 90vh;
@@ -9,10 +9,10 @@ body{
     align-items: center;
 }
 #divBody{
-    background-color: rgb(227, 246, 248);
-    width: 1080px;
+    background-color: #fcfcfcef;
+    width: 800px;
     border-radius: 10px;
-    height: 100vh;
+    height: 600px;
     margin: auto;
     
 }
@@ -35,22 +35,6 @@ header{
 
         & #headerNav{
             display: none;
-        }
-        & #btNav{
-            cursor: pointer;
-            height: 30px;
-            width: 30px;
-            padding: 1px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-around;
-
-            & .blockBtNav{
-                width: 100%;
-                height: 2px;
-                background-color: black;
-            }
         }
     }
 }
@@ -102,7 +86,7 @@ main{
         justify-content: space-between;
         position: relative;
         align-items: center;
-        background-color: lightblue;
+        background-color: rgb(114, 224, 127);
         padding:5px 2px;
         border-radius: 5px;
         transition: 0.4s;
@@ -131,5 +115,31 @@ main{
     }
     .bts:hover{
         text-shadow: 0 0 10px rgb(255, 255, 255);
+    }
+    #sectionDone{
+        display: flex;
+        padding: 5px 0;
+        flex-direction: column;
+        border-top: 1px solid var(--cor2);
+        gap: 5px;
+    }
+}
+
+/* Footer */
+
+footer{
+    & #divFooter{
+        position: relative;
+        display: flex;
+        width: 100%;
+        margin: auto;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        & p{
+            text-align: center;
+            bottom: 0;
+            position: fixed;
+        }
     }
 }
