--- a/ToDoList/style.css
+++ b/ToDoList/style.css
@@ -12,7 +12,7 @@ body{
     background-color: #fcfcfcef;
     width: 800px;
     border-radius: 10px;
-    height: 600px;
+    min-height: 600px;
     margin: auto;
     
 }
@@ -126,20 +126,4 @@ main{
 }
 
 /* Footer */
-
-footer{
-    & #divFooter{
-        position: relative;
-        display: flex;
-        width: 100%;
-        margin: auto;
-        align-items: center;
-        justify-content: center;
-        color: white;
-        & p{
-            text-align: center;
-            bottom: 0;
-            position: fixed;
-        }
-    }
-}
+ 
