estilização rota de produtos no checkbox
feita nova estilização no checkbox e aba para resultados de pesquisa

--- a/drip_store/src/style/index.css
+++ b/drip_store/src/style/index.css
@@ -34,3 +34,7 @@ body{
 .OfertaEspecial{
     background-image: linear-gradient(to bottom, #b5b6f279, rgba(255, 255, 255, 0));
 }
+
+.checkbox1::after{
+    content: "✓";
+}
